[package]
name = "contact_book_parser_protsap"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["contact_book", "ukma", "kma"]
description = "Parser for a contact book"
license = "MIT"
repository = "https://github.com/DaimoniX/contact_book_parser_protsap"

[dependencies]
anyhow = "1.0.92"
pest = "2.7.14"
pest_derive = "2.7.14"
